# Telltale-Editor

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  TelltaleEditor.sln  build_macos.sh
.github/workflows/: cmake-multi-platform.yml
Dev/: Classes.lua  Docs_Latest.lua  Games.lua  Meta.lua  PlatformInputMappings.lua  _Dev.code-workspace  menuitem.prop  mod.lua
Dev/FX/: DX12_Base.fx  DX_Base.fx  MTL_Base.fx
Dev/Game/: Assembly.lua  TX100.lua  VersionCRC.lua
Dev/Scripts/: Classes.lua  Docs_Latest.lua  Games.lua  PlaystationKeys.lua
Dev/Shader/: SimpleColouredVertex.msl  SimpleSampledVertex.msl
Dev/SymbolMaps/: Files_BN100.symmap  Files_CSI3.symmap  RuntimeSymbols.symmap  gen_symmap.py
Dev/TestResources/: adv_forestwaterfall.d3dmesh  debug.txt  mod.lua  obj_deserttilea.d3dmesh  obj_star.d3dmesh  (+4 more)
EditorLibrary/: CMakeLists.txt  EditorLibrary.vcxproj  EditorLibrary.vcxproj.filters
EditorLibrary/Source/: CMakeLists.txt  Config.hpp  TestExport.cpp
EditorLibrary/Source/Meta/: Meta.cpp
EditorLibrary/Source/Scheduler/: CMakeLists.txt  JobScheduler.cpp
EditorLibrary/Source/Scheduler/Platform/Unix/: Thread.cpp
EditorLibrary/Source/Scheduler/Platform/Win64/: CMakeLists.txt  Thread.cpp
EditorLibrary/Source/lua52/: CMakeLists.txt
EditorLibrary/Source/zlib/: CMakeLists.txt
EditorUI/: CMakeLists.txt  EditorUI.vcxproj
EditorUI/EditorUI.xcodeproj/: project.pbxproj
EditorUI/EditorUI.xcodeproj/xcshareddata/xcschemes/: TelltaleEditor Debug.xcscheme  TelltaleEditor Testing.xcscheme
EditorUI/EditorUI.xcodeproj/xcuserdata/lucassaragosa.xcuserdatad/xcschemes/: xcschememanagement.plist
EditorUI/Source/: CMakeLists.txt  Main.cpp
Screenshots/: temp
Scripts/: build_linux.sh  build_macos.sh  build_windows.bat
TelltaleEditor/: CMakeLists.txt
TelltaleEditor.xcworkspace/: contents.xcworkspacedata
TelltaleEditor/Source/Editor/: CMakeLists.txt
TelltaleEditor/Source/Editor/Include/: AnimationManager.hpp  BitSet.hpp  EditorTasks.hpp  ProjectManager.hpp  Scene.hpp  SceneModules.inl  Symbols.hpp  TelltaleEditor.hpp
TelltaleEditor/Source/Editor/Include/Common/: Animation.hpp  AnimationTemplates.inl  Chore.hpp  Common.hpp  InputMapper.hpp  Mesh.hpp  MetaOperations.hpp  Procedural.hpp  PropertySet.hpp  Scene.hpp  Skeleton.hpp  Texture.hpp
TelltaleEditor/Source/Editor/Include/Renderer/: Camera.hpp  LinearHeap.hpp  RenderAPI.hpp  RenderContext.hpp  RenderFX.hpp  RenderParameters.hpp  Text.hpp
TelltaleEditor/Source/Editor/Include/Runtime/: SceneRenderer.hpp  SceneRuntime.hpp
TelltaleEditor/Source/Editor/Include/UI/: ApplicationUI.hpp  EditorUI.hpp  MenuBar.hpp  ModuleUI.inl  UIBase.hpp  UIEditors.hpp  UILayer.hpp
TelltaleEditor/Source/Editor/Source/: AnimationManager.cpp  CommandLine.cpp  EditorTasks.cpp  LuaGameEngine.cpp  Main.cpp  ProjectManager.cpp  Scene.cpp  SceneModules.cpp  TelltaleEditor.cpp
TelltaleEditor/Source/Editor/Source/Common/: Animation.cpp  Chore.cpp  InputMapper.cpp  Mesh.cpp  Procedural.cpp  PropertySet.cpp  Scene.cpp  Skeleton.cpp  Texture.cpp
TelltaleEditor/Source/Editor/Source/Renderer/: RenderAPI.cpp  RenderContext.cp  RenderContext.cpp  RenderDefaults.cpp  RenderFX.cpp  RenderScene.cpp  RenderUtility.cpp  RenderView.cpp
TelltaleEditor/Source/Editor/Source/Runtime/: SceneRenderer.cpp  SceneRuntime.cpp
TelltaleEditor/Source/Editor/Source/UI/: ApplicationUI.cpp  EditorUI.cpp  MenuBar.cpp  ModuleUI.cpp  UIChore.cpp  UILayer.cpp  UIProjectCreate.cpp  UIProjectSelect.cpp  UIPropertySet.cpp  UIResourceManagers.cpp
TelltaleEditor/Source/TelltaleToolLib/: CMakeLists.txt
TelltaleEditor/Source/TelltaleToolLib/Include/: Config.hpp
TelltaleEditor/Source/ToolLibrary/: CMakeLists.txt
TelltaleEditor/Source/ToolLibrary/Include/: Config.hpp
TelltaleEditor/Source/ToolLibrary/Include/Core/: Base64.hpp  BitSet.hpp  CMakeLists.txt  Callbacks.hpp  Config.hpp  Context.hpp  GameCaps.hpp  LinearHeap.hpp  Math.hpp  Symbol.hpp  Thread.hpp  Util.hpp
TelltaleEditor/Source/ToolLibrary/Include/Meta/: CMakeLists.txt  Meta.hpp  MetaCoersion.inl  MetaEnums.inl
TelltaleEditor/Source/ToolLibrary/Include/Platform/: Linux.hpp  Win64.hpp
TelltaleEditor/Source/ToolLibrary/Include/Resource/: AES128.hpp  Blowfish.hpp  CMakeLists.txt  Compression.hpp  DataStream.hpp  ISO9660.hpp  PSPKG.hpp  Pack2.hpp  PropertySet.hpp  ResourceRegistry.hpp  TTArchive.hpp  TTArchive2.hpp
TelltaleEditor/Source/ToolLibrary/Include/Scheduler/: CMakeLists.txt  JobScheduler.hpp  Thread.hpp
TelltaleEditor/Source/ToolLibrary/Include/Scripting/: CMakeLists.txt  LuaManager.hpp  ScriptManager.hpp
TelltaleEditor/Source/ToolLibrary/Source/Core/: CMakeLists.txt  Config.cpp  Context.cpp  Math.cpp  Memory.cpp  Symbol.cpp
TelltaleEditor/Source/ToolLibrary/Source/Core/Platform/Unix/: CMakeLists.txt
TelltaleEditor/Source/ToolLibrary/Source/Core/Platform/Unix/Linux/: CMakeLists.txt  Platform.cpp
TelltaleEditor/Source/ToolLibrary/Source/Core/Platform/Unix/MacOS/: Platform.cpp  Thread.cpp
TelltaleEditor/Source/ToolLibrary/Source/Core/Platform/Win64/: CMakeLists.txt  Platform.cpp  Thread.cpp
TelltaleEditor/Source/ToolLibrary/Source/Meta/: CMakeLists.txt  Meta.cpp  MetaLuaAPI.cpp
TelltaleEditor/Source/ToolLibrary/Source/Platform/: Win64.cpp
TelltaleEditor/Source/ToolLibrary/Source/Resource/: AES128.cpp  Blowfish.cpp  CMakeLists.txt  Compression.cpp  DataStream.cpp  ISO9660.cpp  PSPKG.cpp  Pack2.cpp  PropertySet.cpp  ResourceRegistry.cpp  TTArchive.cpp  TTArchive2.cpp
TelltaleEditor/Source/ToolLibrary/Source/Scheduler/: CMakeLists.txt  JobScheduler.cpp
TelltaleEditor/Source/ToolLibrary/Source/Scheduler/Platform/Unix/Linux/: Thread.cpp
TelltaleEditor/Source/ToolLibrary/Source/Scheduler/Platform/Unix/MacOS/: Thread.cpp
TelltaleEditor/Source/ToolLibrary/Source/Scheduler/Platform/Win64/: Thread.cpp
TelltaleEditor/Source/ToolLibrary/Source/Scripting/: CMakeLists.txt  EngineLuaAPI.cpp  LibraryLuaAPI.cpp  LuaManager.cpp  ScriptManager.cpp
TelltaleEditor/Source/ToolLibrary/Source/Scripting/Adapter/: Lua502.cpp  Lua514.cpp  Lua523.cpp
(+263 files in other folders)
